--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-node_module/
+# Environment variables
+.env
+
+# Node modules
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build
 dist/
-.env   
+build/
